@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT([courier-unicode],[2.3.2.20250504],[courier-users@lists.sourceforge.net])
+AC_INIT([courier-unicode],[2.3.2.20250810],[courier-users@lists.sourceforge.net])
 
 AC_CONFIG_SRCDIR(unicodecpp.C)
 
